--- a/www/partials/home.html
+++ b/www/partials/home.html
@@ -1,10 +1,7 @@
+<ion-pane >
 
-
-   
-  <ion-pane >
-  <input value="Products" type="text" name="page"></input>
 <ion-header-bar class="bar-balanced">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon-round" ng-click="toggleLeft"> </button>
+ <!--    button menu-toggle="left" class="button button-icon icon ion-navicon-round" ng-click="toggleLeft"> </button> -->
         
   </ion-header-bar>
   <ion-header-bar class="bar-subheader bar-dark">
@@ -31,7 +28,7 @@
                       </label>
                        <button type="submit" ng-click="fromLink(store)" class="button button-small button-block button-royal" data-inline="true" ><i class='ion-location' style="font-size:20px">&nbsp</i>Get Location</button>
                     
-                        <button type="submit" ng-click="searchLink(store,from)" class="button button-full button-calm" data-inline="true" ><i class='ion-search' style="font-size:35px">&nbsp</i>Search Location</button>
+                        <button type="submit" ng-click="searchLink(store)" class="button button-full button-calm" data-inline="true" ><i class='ion-search' style="font-size:35px">&nbsp</i>Search Location</button>
                         
                     
                         <button type="submit" id="button2" ng-click="nearHosp()" data-inline="true" class="button button-full button-balanced" ><i class='ion-ios-search-strong' style="font-size:35px">&nbsp</i>Search Nearby</button>
