--- a/www/partials/shopProfile.html
+++ b/www/partials/shopProfile.html
@@ -1,15 +1,14 @@
- <ion-pane >
- <ion-content >
 
-	<div class="row row-center">
-		<form class="col" role="form"  name="shopForm">
+
+<div data-role="content" class="list">   
+        
 			<label class="item item-input item-floating-label">
 				<input type="text" ng-model="shopName" name="shopName" placeholder="ShopName" >
 			</label>
 			<label class="item item-input item-floating-label">
 				<input type="text" ng-model="shopArea" placeholder="Area">
 			</label>
-			<label class="item item-input item-floating-label">
+		<label class="item item-input item-floating-label">
 				<input type="text" name="shopAddr" ng-model="shopAddr" placeholder="Address">
 			</label>
 
@@ -20,20 +19,25 @@
 				<input type="text" name="shopLat" ng-model="shopLat" placeholder="Latitude" >
 			</label>
 				<label class="item item-floating-label">Categories:</label>
+				<ion-scroll zooming="true" direction="y" style="width: 1200px; height: 200px">
 			   <label class="item" ng-repeat="(color,enabled) in colors">
 			   	<ion-checkbox ng-model="colors[color]">{{color}}</ion-checkbox>
        
     </label>
+     </ion-scroll>
+     <ion-scroll zooming="true" direction="y" style="width: 1200px; height: 200px">
+    <label class="item item-file">
+    	 <input type='file' ng-model-instant onchange="angular.element(this).scope().imageUpload(this)" />
+    	   <div ng-repeat="step in stepsModel">
+        <img class="thumb" ng-src="{{step}}" />
+    </div>
+    	</label>
 				<button class="button button-full button-calm" type="submit" ng-click="SendShop()">
 				Submit
 			</button>
-
-		</form>
-
-
-
-
+   </ion-scroll>
 </div>
 
-   </ion-content>
-</ion-pane>
+
+
+	
