--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,29 +1,30 @@
 
+
+
 <div class="row back-color" >
+	<ion-view class="padding scroll-pane">
 	<div class="col col-center">
 		<div class="row">
 			<div class="col text-center">
 
 				<h1 class="heading">Search It !!</h1>
+
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col">
-				<a class="button button-full button-calm" ng-href="/#/login"> Login</a>
+		<div class="row ">
+			<div class="col  ">
+				<a class="button button-full button-calm " ng-href="/#/login" > Login</a>
 				<a class="button button-full button-assertive" ng-href="/#/home">Or Continue</a>
  				<form>
- 						<label class="item item-input item-floating-label">
-				<input type="text" name="shopAddr" ng-model="shopAddr" placeholder="Address">
-			</label>
- 					<label class="item item-file">
-    	  <input type="file" name="pic" ng-model="pic" accept="image/*"></label>
-    	  <button class="button button-full button-calm" type="submit" ng-click="sendPic()">
-				Submit
+ 						
+ 		
 			</button>
  				</form>
+ 				</ion-vew>
 			</div>
 			</div>
 		
 	</div>
 </div>  
+</ion-view>
