--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,9 +1,9 @@
 
 
 
-<div class="row back-color" >
-	<ion-view class="padding scroll-pane">
-	<div class="col col-center">
+<div class="row back-color padding scroll-pane" >
+
+	<div class="col col-center ">
 		<div class="row">
 			<div class="col text-center">
 
@@ -14,17 +14,16 @@
 
 		<div class="row ">
 			<div class="col  ">
-				<a class="button button-full button-calm " ng-href="/#/login" > Login</a>
-				<a class="button button-full button-assertive" ng-href="/#/home">Or Continue</a>
+				<a class="button button-block  button-calm " ng-href="/#/login" > Login</a>
+				<a class="button button-block  button-assertive" ng-href="/#/home">Or Continue</a>
  				<form>
  						
  		
 			</button>
  				</form>
- 				</ion-vew>
+ 				
 			</div>
 			</div>
 		
 	</div>
 </div>  
-</ion-view>
