--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,6 +5,12 @@
     font-weight: 900;
 
 }
+.title1{
+    font-color:blue;
+  font-family:  cursive;
+    font-weight: 900;
+
+}
 
 .item-avatar img {
     background-color: white;
