--- a/www/partials/home.html
+++ b/www/partials/home.html
@@ -10,33 +10,47 @@
     
   </ion-header-bar>
   <ion-content class="scroll-pane">
+  <div class="col col-center ">
     <form> 
                 <div class="list">  
+                </br>
             <label class="item item-input item-select">
             <div class="input-label">
                  Categories
            </div>
             <select ng-model="selectedCategories.categoryId" ng-options="category.categoryId as category.name for category in chooseCategories" ng-change="openModal(selectedCategories.categoryId)"></select>
            </label>
-           
+                <label >
+        </br>
+           </label>
+     
                       <label class="item item-input list-inset " ng-show="searchFor" >
                   <strong> <input type="text" id="store" ng-model="store" class="store" name="store" placeHolder="Search the World.." required="required"> </strong>
                    </label>
-                
+                  </label>
+                <label >
+        </br>
+           </label>
+           <label >   </br>
+        </br> </br>
+           </label>
                       <div ng-show="categoriesMap">
 
  </div>
  </div>
  </form> 
-                       <button type="submit" ng-click="fromLink(store)" class="button button-small  button-calm" data-inline="true" ><i class='ion-location' style="font-size:20px">&nbsp</i>Get Location</button>
+                   
                                            
                     
-                        <button type="submit" id="button2" ng-click="searchThis(store)" data-inline="true" class="button button-small button-calm" ><i class='ion-ios-search-strong' style="font-size:20px">&nbsp</i>Search Nearby</button>
+                        <button type="submit" id="button2"  ng-click="searchThis(store)" data-inline="true" class="button button-full button-assertive" ><i class='ion-ios-search-strong' style="font-size:20px">&nbsp</i>Search Nearby</button>
                   
             
           
                <div id="map-canvas" class="map rounded item size" ng-show="mapItem"></div>
-                <button class="button button-assertive button-full" ng-click="showMap()">Show in Map</button>
+                <button class="button button-calm button-full" ng-show="mymap" ng-click="showMap()">Show in Map</button>
+               
+                <button class="button button-calm button-full" ng-show="mylist"  ng-click="showList()">Show in List</button>
+              
                 <div id="results"  class="panel" ng-show="Results">
 
               <h2>Shops With Profile</h2>
@@ -52,13 +66,13 @@
              <div>
               <h2>Extra Shops</h2>
                <div class="list">
-                   <div ng-repeat="extra in extras" >
+                   <div class="item" ng-repeat="extra in extras" >
                      <h2 style="font-size:22px">{{extra.name}}</h2>
                     </div>
                 </div>
              </div>
         </div>
-          
+          </div>
   </ion-content>
       </ion-side-menu-content>
           <ion-side-menu side="left">
@@ -72,4 +86,165 @@
     </ion-side-menu>
   </ion-side-menus>
 
+
+<!-- Modals -->
+
+
+  <script id="automotive-modal.html" type="text/ng-template">
+  <ion-modal-view>
+    <ion-header-bar>
+      <h1 class="title">Automotive Category</h1>
+    </ion-header-bar>
+    <ion-content>
+       <label class="item item-input item-select">
+            <div class="input-label">
+                 Choose Automotive Category
+           </div>
+            <select ng-model="selectedAutomotive.categoryId" ng-options="category.categoryId as category.name for category in chooseAutomotive" ng-change="closeModal(1,selectedAutomotive.categoryId)"></select>
+           </label>
+    </ion-content>
+  </ion-modal-view>
+</script>
+
+
+<script id="education-modal.html" type="text/ng-template">
+  <ion-modal-view>
+    <ion-header-bar>
+      <h1 class="title">Education & Sports Category</h1>
+    </ion-header-bar>
+    <ion-content>
+       <label class="item item-input item-select">
+            <div class="input-label">
+                 Choose Something in Education & Sports Category
+           </div>
+            <select ng-model="selectedEducation.categoryId" ng-options="category.categoryId as category.name for category in chooseEducation" ng-change="closeModal(2,selectedEducation.categoryId)"></select>
+           </label>
+    </ion-content>
+  </ion-modal-view>
+</script>
+
+
+
+<script id="restaurantsandfoods-modal.html" type="text/ng-template">
+  <ion-modal-view>
+    <ion-header-bar>
+      <h1 class="title">Restaurant And Foods Category</h1>
+    </ion-header-bar>
+    <ion-content>
+       <label class="item item-input item-select">
+            <div class="input-label">
+                 Choose Something in Restaurant And Foods Category
+           </div>
+            <select ng-model="selectedrestaurantsandfoods.categoryId" ng-options="category.categoryId as category.name for category in chooserestaurantsandfoods" ng-change="closeModal(3,selectedrestaurantsandfoods.categoryId)"></select>
+           </label>
+    </ion-content>
+  </ion-modal-view>
+</script>
+
+
+<script id="men-modal.html" type="text/ng-template">
+  <ion-modal-view>
+    <ion-header-bar>
+      <h1 class="title">Men Category</h1>
+    </ion-header-bar>
+    <ion-content>
+       <label class="item item-input item-select">
+            <div class="input-label">
+                 Choose Something in Men Category
+           </div>
+            <select ng-model="selectedMen.categoryId" ng-options="category.categoryId as category.name for category in chooseMen" ng-change="closeModal(4,selectedMen.categoryId)"></select>
+           </label>
+    </ion-content>
+  </ion-modal-view>
+</script>
+
+
+<script id="women-modal.html" type="text/ng-template">
+  <ion-modal-view>
+    <ion-header-bar>
+      <h1 class="title">Women Category</h1>
+    </ion-header-bar>
+    <ion-content>
+       <label class="item item-input item-select">
+            <div class="input-label">
+                 Choose Something in Women Category
+           </div>
+            <select ng-model="selectedWomen.categoryId" ng-options="category.categoryId as category.name for category in chooseWomen" ng-change="closeModal(5,selectedWomen.categoryId)"></select>
+           </label>
+    </ion-content>
+  </ion-modal-view>
+</script>
+
+
+
+
+
+
+<script id="kids-modal.html" type="text/ng-template">
+  <ion-modal-view>
+    <ion-header-bar>
+      <h1 class="title">Kids Category</h1>
+    </ion-header-bar>
+    <ion-content>
+       <label class="item item-input item-select">
+            <div class="input-label">
+                 Choose Something in Kids Category
+           </div>
+            <select ng-model="selectedKid.categoryId" ng-options="category.categoryId as category.name for category in chooseKid" ng-change="closeModal(6,selectedKid.categoryId)"></select>
+           </label>
+    </ion-content>
+  </ion-modal-view>
+</script>
+
+
+<script id="generalitems-modal.html" type="text/ng-template">
+  <ion-modal-view>
+    <ion-header-bar>
+      <h1 class="title">General Items Category</h1>
+    </ion-header-bar>
+    <ion-content>
+       <label class="item item-input item-select">
+            <div class="input-label">
+                 Choose Something in General Items Category
+           </div>
+            <select ng-model="selectedgenItem.categoryId" ng-options="category.categoryId as category.name for category in choosegenItem" ng-change="closeModal(7,selectedgenItem.categoryId)"></select>
+           </label>
+    </ion-content>
+  </ion-modal-view>
+</script>
+
+<script id="householdgoods-modal.html" type="text/ng-template">
+  <ion-modal-view>
+    <ion-header-bar>
+      <h1 class="title">House Hold & Tech. Category</h1>
+    </ion-header-bar>
+    <ion-content>
+       <label class="item item-input item-select">
+            <div class="input-label">
+                 Choose Something in House Hold & Tech. Category
+           </div>
+            <select ng-model="selectedhouseHold.categoryId" ng-options="category.categoryId as category.name for category in choosehouseHold" ng-change="closeModal(8,selectedhouseHold.categoryId)"></select>
+           </label>
+    </ion-content>
+  </ion-modal-view>
+</script>
+
+
+
+
+<script id="places-modal.html" type="text/ng-template">
+  <ion-modal-view>
+    <ion-header-bar>
+      <h1 class="title">Place Category</h1>
+    </ion-header-bar>
+    <ion-content>
+       <label class="item item-input item-select">
+            <div class="input-label">
+                 Choose Something in Place Category
+           </div>
+            <select ng-model="selectedPlace.categoryId" ng-options="category.categoryId as category.name for category in choosePlace" ng-change="closeModal(9,selectedPlace.categoryId)"></select>
+           </label>
+    </ion-content>
+  </ion-modal-view>
+</script>
 
