--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,7 +1,7 @@
 
 
 
-<div class="row back-color padding scroll-pane" >
+<div class="row back-color padding scroll-bg" >
 
 	<div class="col col-center ">
 		<div class="row">
