--- a/www/partials/Single_Shop.html
+++ b/www/partials/Single_Shop.html
@@ -1,6 +1,16 @@
+<ion-side-menus >
+    <ion-side-menu-content>
+  <ion-pane >
+  <ion-header-bar class="bar bar-header bar-dark">
+    <button menu-toggle="left" class="button button-icon icon ion-navicon-round" ng-click="toggleLeft"> </button>
+        
+        <h1 class="title" style=" font-size:25px; ">Search It !!</h1>
+      
+    
+  </ion-header-bar>
+  <ion-content class="scroll-ag">
 
-
-		<div class="list card item-center   " >
+		<div class="list card item-center" >
 
 			<div class="item  ">
 
@@ -26,7 +36,7 @@
 					<i class="ion-eye" style="font-size:35px">&nbsp;</i>Add A Review
 				</button>
 
-			</div>
+		
 
  <ion-scroll zooming="true" direction="y" style="height: 500px">
 			<div class="item" ng-repeat="Review in Reviews" >
@@ -36,4 +46,17 @@
 			</div>
 </ion-scroll>
 		</div>
+	</div>
+  </ion-content>
+      </ion-side-menu-content>
+          <ion-side-menu side="left">
 
+    <ion-list >
+     <a  ng-click="hello()" ng-href="/#/home"> <ion-item nav-clear menu-toggle>  <h3> Home <i class="ion-eye" style="font-size:25px"></i> </h3></ion-item></a>
+      <ion-item nav-clear menu-toggle>  <h3>  Top Ten Shops <i class="ion-eye" style="font-size:25px"></i> </h3></ion-item>
+      <ion-item nav-clear menu-toggle>  <h3>  Most Searched Items <i class="ion-eye" style="font-size:25px"></i> </h3></ion-item>
+      <ion-item nav-clear menu-toggle>  <h3>  Your Wishlist <i class="ion-eye" style="font-size:25px"></i> </h3></ion-item>
+
+         </ion-list>
+    </ion-side-menu>
+  </ion-side-menus>
