--- a/www/partials/home.html
+++ b/www/partials/home.html
@@ -14,7 +14,7 @@
     on-refresh="doRefresh()">
   </ion-refresher>
   <div class="col col-center ">
-    <form> 
+
                 <div class="list">  
                 </br>
             <label class="item item-input item-select">
@@ -41,7 +41,7 @@
 
  </div>
  </div>
- </form> 
+
                    
                                            
                     
@@ -49,8 +49,8 @@
                   
             
           
-               <div id="map-canvas" class="map rounded item size" ng-show="mapItem"></div>
-                <button class="button button-calm button-full" ng-show="mymap" ng-click="showMap()">Show in Map</button>
+               <div id="map-canvas" class="map rounded item size" data-tap-disabled="true" ng-show="mapItem"></div>
+                <button class="button button-calm button-full" ng-show="mymap" ng-click="showMap(store)">Show in Map</button>
                
                 <button class="button button-calm button-full" ng-show="mylist"  ng-click="showList()">Show in List</button>
               
@@ -77,6 +77,9 @@
         </div>
           </div>
   </ion-content>
+   <ion-footer-bar class="bar-dark">
+          <h1 class="title" style=" font-size:25px; ">F9</h1>
+    </ion-footer-bar>
       </ion-side-menu-content>
           <ion-side-menu side="left">
 
