--- a/www/partials/home.html
+++ b/www/partials/home.html
@@ -30,7 +30,7 @@
                       <label class="item item-input list-inset " ng-show="searchFor" >
                   <strong> <input type="text" id="store" ng-model="store" class="store" name="store" placeHolder="Search the World.." required="required"> </strong>
                    </label>
-                  </label>
+                 
                 <label >
         </br>
            </label>
@@ -46,14 +46,16 @@
                                            
                     
                         <button type="submit" id="button2"  ng-click="searchThis(store)" data-inline="true" class="button button-full button-assertive" ><i class='ion-ios-search-strong' style="font-size:20px">&nbsp</i>Search Nearby</button>
+
                   
-            
-          
+                  
+            <button class="button button-calm button-full" ng-show="mylist"  ng-click="showList()">Show in List</button>
+                                <button type="submit" id="button2"  ng-click="searchThis(store)" data-inline="true" class="button button-full button-dark" ng-show="focus"><i class='ion-navigate' style="font-size:20px">&nbsp</i>Navigate Me</button>
                <div id="map-canvas" class="map rounded item size" data-tap-disabled="true" ng-show="mapItem"></div>
                <div id="map-canvas1"  ng-show="mapIt"></div>
                 <button class="button button-calm button-full" ng-show="mymap" ng-click="showMap(store)">Show in Map</button>
                
-                <button class="button button-calm button-full" ng-show="mylist"  ng-click="showList()">Show in List</button>
+                
               
                 <div id="results"  class="panel" ng-show="Results">
 
